--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,11 +26,19 @@
             android:label="@string/app_name">
             
         </activity>
+
         <activity 
             android:name=".FormActivity"
             android:label="@string/app_name">
-            
         </activity>
+
+        <service android:name=".service.ServiceTeste" android:enabled="true">
+            <intent-filter>
+                <action android:name="INICIAR_SERVICO" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
