--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,9 @@
         android:minSdkVersion="11"
         android:targetSdkVersion="17" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -30,6 +33,11 @@
         <activity 
             android:name=".FormActivity"
             android:label="@string/app_name">
+        </activity>
+
+        <activity
+                android:name=".ShakeActivity"
+                android:label="@string/app_name">
         </activity>
 
         <service android:name=".service.ServiceTeste" android:enabled="true">
